integrate irlp-api source directly into irlp-map

--- a/public/index.html
+++ b/public/index.html
@@ -753,7 +753,7 @@
         setLoading(true);
 
         // fetch irlp nodes
-        fetch('https://irlp.liamcottle.net/api/v1/nodes').then(async (response) => {
+        fetch('/api/v1/nodes').then(async (response) => {
 
             // update nodes
             var json = await response.json();
